--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-
+################################################# Actuator Properties ##################################################
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=1m
+management.server.port=8081
 
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
